--- a/documentation/class_component.html
+++ b/documentation/class_component.html
@@ -76,11 +76,19 @@ Inheritance diagram for Component:</div>
 <div class="dyncontent">
 <div class="center"><img src="class_component__inherit__graph.png" border="0" usemap="#a_component_inherit__map" alt="Inheritance graph"/></div>
 <map name="a_component_inherit__map" id="a_component_inherit__map">
-<area shape="rect" title=" " alt="" coords="82,5,170,32"/>
-<area shape="rect" href="class_three_terminals.html" title=" " alt="" coords="5,80,116,107"/>
-<area shape="rect" href="class_two_terminals.html" title=" " alt="" coords="141,80,242,107"/>
+<area shape="rect" title=" " alt="" coords="79,5,212,244"/>
+<area shape="rect" href="class_three_terminals.html" title=" " alt="" coords="5,292,136,413"/>
+<area shape="rect" href="class_two_terminals.html" title=" " alt="" coords="161,299,282,406"/>
 </map>
-<center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
+</div>
+<div class="dynheader">
+Collaboration diagram for Component:</div>
+<div class="dyncontent">
+<div class="center"><img src="class_component__coll__graph.png" border="0" usemap="#a_component_coll__map" alt="Collaboration graph"/></div>
+<map name="a_component_coll__map" id="a_component_coll__map">
+<area shape="rect" title=" " alt="" coords="5,5,139,244"/>
+</map>
+</div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a id="pub-methods" name="pub-methods"></a>
 Public Member Functions</h2></td></tr>
