--- a/documentation/class_three_terminals.html
+++ b/documentation/class_three_terminals.html
@@ -75,19 +75,19 @@ Inheritance diagram for ThreeTerminals:</div>
 <div class="dyncontent">
 <div class="center"><img src="class_three_terminals__inherit__graph.png" border="0" usemap="#a_three_terminals_inherit__map" alt="Inheritance graph"/></div>
 <map name="a_three_terminals_inherit__map" id="a_three_terminals_inherit__map">
-<area shape="rect" title=" " alt="" coords="5,80,116,107"/>
-<area shape="rect" href="class_component.html" title=" " alt="" coords="17,5,105,32"/>
+<area shape="rect" title=" " alt="" coords="7,292,137,413"/>
+<area shape="rect" href="class_component.html" title=" " alt="" coords="5,5,139,244"/>
 </map>
-<center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
+</div>
 <div class="dynheader">
 Collaboration diagram for ThreeTerminals:</div>
 <div class="dyncontent">
 <div class="center"><img src="class_three_terminals__coll__graph.png" border="0" usemap="#a_three_terminals_coll__map" alt="Collaboration graph"/></div>
 <map name="a_three_terminals_coll__map" id="a_three_terminals_coll__map">
-<area shape="rect" title=" " alt="" coords="5,80,116,107"/>
-<area shape="rect" href="class_component.html" title=" " alt="" coords="17,5,105,32"/>
+<area shape="rect" title=" " alt="" coords="7,292,137,413"/>
+<area shape="rect" href="class_component.html" title=" " alt="" coords="5,5,139,244"/>
 </map>
-<center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
+</div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a id="pub-methods" name="pub-methods"></a>
 Public Member Functions</h2></td></tr>
